# OpenGLBegin

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
libraries/include/glm/detail/: func_integer.inl
resources/shaders/: basicShader.glsl  basicShader.shader  cubeTest.glsl  cubeTextureTest.glsl  testModel.glsl  textureTest.glsl
sources/: OpenGLBeginConfig.h.in  main.cpp
sources/App/: App.cpp  App.hpp  AppError.cpp  AppInit.cpp  AppShader.cpp  Errors.cpp  Errors.hpp  ImGui.cpp  IndexBuffer.cpp  IndexBuffer.hpp  OpenGL.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shaders.cpp  Shaders.hpp  Texture.cpp  Texture.hpp  Uniform.cpp  Uniform.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  debug.cpp  debug.hpp  macros.h
sources/App/Tests/: MVPControl.cpp  MVPControl.hpp  Test.hpp  TestClearColour.cpp  TestClearColour.hpp  TestCube.cpp  TestCube.hpp  TestCubeTexture.cpp  TestCubeTexture.hpp  TestDoge.cpp  TestDoge.hpp  TestMenu.cpp  TestMenu.hpp  TestModel.cpp  TestModel.hpp  TestRainbow.cpp  TestRainbow.hpp  TestTexture.cpp  TestTexture.hpp
sources/RainbowColour/: RainbowColour.hpp
